tests/baselines/reference/typeofImportInvalidElision.errors.txt
main.ts(1,39): error TS1005: '{' expected.


==== input.ts (0 errors) ====
    export type X = 1;
    
==== main.ts (1 errors) ====
    type T2 = typeof import('./input.js', ,);
                                          ~
!!! error TS1005: '{' expected.
!!! related TS1007 main.ts:1:39: The parser expected to find a '}' to match the '{' token here.
    